--- a/.env.local
+++ b/.env.local
@@ -10,3 +10,4 @@ AZURE_AD_CLIENT_ID="9dda4ef5-ff8d-49eb-9eeb-672983ff357c"
 AZURE_AD_CLIENT_SECRET="AbT8Q~1JTlZjtLuLpR~rXwIlnGHP9M8q.V6KNc.E"
 AZURE_AD_TENANT_ID="cd510d71-5fb0-40d6-82a4-58151eb53df2"
 NEXTAUTH_SECRET="a7b3c9d1e8f2g4h5j6k1l2m3n4o5p6q7r8s9t0u1"
+NEXTAUTH_URL=http://localhost:3000
